修改页面顺序 展开代码块

--- a/css/theme/black.css
+++ b/css/theme/black.css
@@ -158,8 +158,8 @@ body {
 .reveal pre code {
   display: block;
   padding: 5px;
-  overflow: auto;
-  max-height: 400px;
+  overflow: visible;
+  max-height: 100%;
   word-wrap: normal; }
 
 .reveal table {
